# recco

./: README.md  pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  database.py  main.py  sql_app.db
backend/alembic/versions/: 14b30242b197_descrip.py  2f2ceea1992c_ingredient.py  881116b61725_productingredientrelation.py  91b129024768_products.py  d80c65c6471d_review.py
backend/apps/: models.py  schemas.py
backend/apps/repository/: detail.py  search.py
backend/apps/routers/: detail.py  search.py
front/: next.config.js  package-lock.json  package.json
front/pages/: _app.js
front/pages/detail/: [id].js
front/src/components/compareBox/CompareBox/: CompareBox.js
front/src/components/header/: Header.js  HeaderWrap.js
front/src/components/search/searchCategory/: SearchResultFromCategory.js
front/src/components/search/searchIngredient/searchIngredientResult/: SearchIngredientResult.js
front/src/components/search/searchKeyword/searchResult/: SearchResult.js
front/src/components/search/searchResultItem/: SearchResultItem.js  SearchResultItemSkeleton.js
front/src/stores/modules/: index.js  productInfo.js
front/src/stores/sagas/: index.js
