[tool.poetry]
name = "onetop"
version = "0.1.0"
description = ""
authors = ["none"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.31"
SQLAlchemy-Utils = "^0.38.2"
fastapi = "^0.74.1"
alembic = "^1.7.6"
PyMySQL = "^1.0.2"
uvicorn = "^0.17.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
